# ucontroller-emulator

./: .gitignore  CMakeLists.txt  README.md  automate.sh
source/: CMakeLists.txt
source/inc/: communication.h  i2c.h  main.h  spi.h
source/src/: i2c.cpp  main.cpp  spi.cpp
test/: CMakeLists.txt  main.cpp
